# Desigof-a-Smart-Home-Central-Control-System-Based-on-LVGL-and-FreeRTOS-

./: .gitignore  README.md
software_part/: CMakeLists.txt  Kconfig.projbuild  credentials.json.example  idf_component.yml  sdkconfig.defaults  setup_credentials.sh
software_part/components/01_application/app_env_sht40/: CMakeLists.txt  app_env_sht40.c
software_part/components/01_application/app_inmp441/: CMakeLists.txt  app_inmp441.c
software_part/components/01_application/app_music/: CMakeLists.txt  app_music.c
software_part/components/01_application/app_ui/: CMakeLists.txt  app_ui.c
software_part/components/01_application/app_ws2812/: CMakeLists.txt  app_ws2812.c
software_part/components/01_application/my_ui/: CMakeLists.txt  Kconfig.projbuild
software_part/components/01_application/voice_commands/: CMakeLists.txt  voice_commands.c
software_part/components/02_middleware/asr_client/: CMakeLists.txt  asr_client.c
software_part/components/02_middleware/audio_aec/: CMakeLists.txt  audio_aec.c
software_part/components/02_middleware/audio_ns/: CMakeLists.txt  audio_ns.c
software_part/components/02_middleware/audio_player/: CMakeLists.txt  Kconfig  audio_player.c  file_src_element.c  i2s_sink_element.c  music_spectrum.c  server_root_cert.c  tts_player.c
software_part/components/02_middleware/hal_display_touch/: CMakeLists.txt  hal_display_touch.c
software_part/components/02_middleware/http_stream/: CMakeLists.txt  Kconfig  http_playlist.c  http_stream.c  join_path.c  url_encode.c
software_part/components/02_middleware/iot_mqtt/: CMakeLists.txt  Kconfig  iot_mqtt.c
software_part/components/02_middleware/lvgl_port/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml  lvgl_port.c
software_part/components/02_middleware/net_rtt_ping/: CMakeLists.txt  Kconfig  net_rtt_ping.c
software_part/components/02_middleware/net_wifi_scan/: CMakeLists.txt  Kconfig  net_wifi_scan.c
software_part/components/02_middleware/net_wifi_sntp/: CMakeLists.txt  Kconfig  net_wifi_sntp.c
software_part/components/02_middleware/ota_update/: CMakeLists.txt  ota_update.c
software_part/components/02_middleware/voice_afe/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  voice_afe.c
software_part/components/02_middleware/weather_client/: CMakeLists.txt  Kconfig  weather_client.c  weather_client.h
software_part/components/03_drivers/audio_i2s/: CMakeLists.txt  audio_i2s.c
software_part/components/03_drivers/drivers_ft6336/: CMakeLists.txt  ft6336_driver.c
software_part/components/03_drivers/drivers_inmp441/: CMakeLists.txt  inmp441_driver.c
software_part/components/03_drivers/drivers_sht40/: CMakeLists.txt  sht40_driver.c
software_part/components/03_drivers/drivers_st7796/: CMakeLists.txt  st7796_driver.c
software_part/components/03_drivers/drivers_ws2812b/: CMakeLists.txt  ws2812b_driver.c
software_part/components/03_drivers/i2c_touch_bus/: CMakeLists.txt  i2c_touch_bus.c
software_part/components/03_drivers/sdcard_spi/: CMakeLists.txt  sdcard_spi.c
software_part/components/04_hardware/board/: CMakeLists.txt
software_part/components/common/mem_utils/: CMakeLists.txt
software_part/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
software_part/partition_table/: partitions_custom.csv
software_part/services/Chatbot/: .env.example  .gitignore  package-lock.json  package.json  requirements.txt  server.js  test_cosyvoice_chunk.txt
software_part/services/Chatbot/public/: index.html  script.js  styles.css  ws-config.js
software_part/services/Chatbot/scripts/: asr_worker_hybrid.py  asr_worker_streaming.py  cosyvoice_test.py  cosyvoice_ws_client.py  sensevoice_infer.py  sensevoice_stream.py  sensevoice_worker.py  tts_stream.py
software_part/services/Chatbot/src/: config.js  logger.js  metrics.js
software_part/services/Chatbot/test/: metrics.test.js  validators.test.js
software_part/services/Chatbot/tools/: cosyvoice_tester.py
software_part/services/IoT_cloud_platform/: .dockerignore  .gitignore
software_part/services/IoT_cloud_platform/backend/: Dockerfile  pom.xml
software_part/services/IoT_cloud_platform/deploy/: .env.example  docker-compose.yml  import_music.py  settings.xml
software_part/services/IoT_cloud_platform/frontend/: .env.development  .env.example  .env.production  .eslintrc.cjs  .lintstagedrc.json  Dockerfile  FRONTEND_UI_FILES.md  commitlint.config.js  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
software_part/services/IoT_cloud_platform/scripts/: ci_local.sh  dev-up.sh
software_part/services/IoT_cloud_platform/tests/: __init__.py  device_online_demo.py  run_tests.py
software_part/services/Music_Server/: generate_index.sh
software_part/services/Music_Server/admin/: app.js  index.html  log_api.py  styles.css
software_part/services/WeChat_Mini_Program/: App.uvue  main.uts  manifest.json  pages.json  project.private.config.json  uni.scss
software_part/services/WeChat_Mini_Program/api/: alert.js  alertRule.js  auth.js  device.js  http.js  music.js  telemetry.js  user.js
software_part/services/WeChat_Mini_Program/common/: config.js  constants.js  request.js  storage.js  theme.js
software_part/services/WeChat_Mini_Program/stores/: alert.js  alertRule.js  app.js  auth.js  device.js  index.js  pinia.js  telemetry.js  user.js
software_part/services/WeChat_Mini_Program/utils/: format.js  permission.js  validator.js
software_part/services/weather-service/: .env.example  .gitignore  package.json
software_part/services/weather-service/data/: admin_2023_raw.txt  admin_divisions_2023.csv  admin_divisions_2023_min.csv
software_part/services/weather-service/public/: index.html  manifest.webmanifest  sw.js
software_part/tools/font/: charlist.txt  font_raw.txt
software_part/tools/my_music_tools/: generate_music_index.py  https_range_server.py  test.flac  test.opus  to_44100_16bit.sh
software_part/tools/my_wifi_tools/: ping_plot.py  scan_plot.py
software_part/tools/pinyin/: gen_lvgl_pinyin_dict.py  pinyin.txt
(+344 files in other folders)
